updatd for test '

--- a/src/pages/intro.css
+++ b/src/pages/intro.css
@@ -16,7 +16,7 @@
 	text-align: center;
   }
  .intro p {
-    width: 80%;
+   color:#fff;
     font-size: 1.1rem;
     font-weight: lighter;
     line-height: 1.4;
